# SMILE

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
SMILE/: __init__.py  utils.py
Tutorial/: run_SMILE_on_simulation_data.ipynb
dataset/simulation/: simulated_S1_ST_final.h5ad  simulated_S2_true_cluster.csv  simulated_S2_true_prob.csv  simulated_S3_ST_final.h5ad  simulated_S3_true_cluster.csv  simulated_S3_true_prob.csv
src/stSMILE-0.0.1/: __init__.py  analysis.py  stSMILE.py
tutorial/: run_SMILE_on_DLPFC_data.ipynb  run_SMILE_on_simulation_data.ipynb
